add function: POST form

--- a/sample_server_ejs/public_html/index.ejs
+++ b/sample_server_ejs/public_html/index.ejs
@@ -8,6 +8,18 @@
   <body>
     <h1><%= title %></h1>
     <p><%- content %></p>
-    <p><%= num %> views</p>
+    <hr />
+
+    <div>
+      <form action="" method="post">
+        <input type="text" name="name" />
+        <input type="submit" value="投稿する" />
+        <ul>
+          <% for (let i = 0; i < posts.length; i++) { %>
+          <li><%= posts[i] %></li>
+          <% } %>
+        </ul>
+      </form>
+    </div>
   </body>
 </html>
