--- a/blog/views/posts/index.ejs
+++ b/blog/views/posts/index.ejs
@@ -1,16 +1,10 @@
-<!DOCTYPE html>
-<html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IM blog</title>
-  </head>
-  <body>
-    <h1>Posts</h1>
-    <ul>
-      <% for (let i = 0; i < posts.length; i++) { %>
-      <li><%= posts[i].title %></li>
-      <% } %>
-    </ul>
-  </body>
-</html>
+<%- include('../header'); -%>
+  <h1>Posts</h1>
+  <ul>
+    <% for (let i = 0; i < posts.length; i++) { %>
+      <li>
+        <a href="/posts/<%= i %>"><%= posts[i].title %></a>
+      </li>
+    <% } %>
+  </ul>
+<%- include('../footer'); -%>
